--- a/uDrive/uDrive.Core/App_Plugins/uDrive/config/lang/en_GB.xml
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/config/lang/en_GB.xml
@@ -2,6 +2,12 @@
 <language alias="en-GB" intName="English (UK)" localName="English (UK)" lcid="" culture="en-GB">
   <area alias="udrive">
     <key alias="googleDriveForUmbraco">Google Drive for Umbraco</key>
+    <key aliad="somethingWentWrong">Okay. Something went wrong.</key>
+    <key aliad="informationSavedMessage"><![CDATA[Hi there %0%. We have saved your information to a config file, so Umbraco can pull stats from your Google Drive Account.<br /><br />You can now <a href='javascript:self.close();'>close this window</a>.]]></key>
+    <key aliad="noAccess">Sorry you do not have access.</key>
+    <!--<key aliad=""></key>
+    <key aliad=""></key>
+    <key aliad=""></key>-->
   </area>
   <area alias="treeHeaders">
     <key alias="udrive">uDrive</key>
