--- a/uDrive/uDrive.Site/Umbraco/Config/Lang/en.xml
+++ b/uDrive/uDrive.Site/Umbraco/Config/Lang/en.xml
@@ -1125,6 +1125,7 @@ To manage your website, simply open the Umbraco back office and start adding con
     <key alias="help" version="7.0">Help</key>
     <key alias="forms">Forms</key>
     <key alias="analytics">Analytics</key>
+    <key alias="udrive">uDrive</key>
   </area>
   <area alias="help">
     <key alias="goTo">go to</key>
