Fixing up install process. Adding fields for Files. UI WIP.

--- a/uDrive/uDrive.Site/Umbraco/Config/Lang/en.xml
+++ b/uDrive/uDrive.Site/Umbraco/Config/Lang/en.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language alias="en" intName="English (UK)" localName="English (UK)" lcid="" culture="en-GB">
   <creator>
     <name>The Umbraco community</name>
@@ -1125,7 +1125,7 @@ To manage your website, simply open the Umbraco back office and start adding con
     <key alias="help" version="7.0">Help</key>
     <key alias="forms">Forms</key>
     <key alias="analytics">Analytics</key>
-  </area>
+  <key alias="udrive">uDrive</key></area>
   <area alias="help">
     <key alias="goTo">go to</key>
     <key alias="helpTopicsFor">Help topics for</key>
@@ -1329,7 +1329,7 @@ To manage your website, simply open the Umbraco back office and start adding con
 
     <key alias="iWant">I want</key>
     <key alias="allContent">all content</key>
-    <key alias="contentOfType">content of type &quot;%0%&quot;</key>
+    <key alias="contentOfType">content of type "%0%"</key>
     <key alias="from">from</key>
     <key alias="websiteRoot">my website</key>
     <key alias="where">where</key>
@@ -1608,7 +1608,7 @@ To manage your website, simply open the Umbraco back office and start adding con
     <key alias="xslt">XSLT Files</key>
     <key alias="analytics">Analytics</key>
     <key alias="users">Users</key>
-  </area>
+  <key alias="udrive">uDrive</key></area>
   <area alias="update">
     <key alias="updateAvailable">New update ready</key>
     <key alias="updateDownloadText">%0% is ready, click here for download</key>
@@ -1869,4 +1869,14 @@ To manage your website, simply open the Umbraco back office and start adding con
   <area alias="textbox">
     <key alias="characters_left">characters left</key>
   </area>
-</language>
+<area alias="udrive">
+    <key alias="googleDriveForUmbraco">Google Drive for Umbraco</key>
+    <key alias="somethingWentWrong">Okay. Something went wrong.</key>
+    <key alias="informationSavedMessage"><![CDATA[Hi there %0%. We have saved your information to a config file, so Umbraco can pull stats from your Google Drive Account.<br /><br />You can now <a href='javascript:self.close();'>close this window</a>.]]></key>
+    <key alias="noAccess">Sorry you do not have access.</key>
+    <!--
+    <key alias=""></key>
+    <key alias=""></key>
+    <key alias=""></key>
+    -->
+  </area></language>
